tests/extensions/editheader/errors/field-name-runtime.sieve
require "editheader";
require "variables";

set "header" "X-field:";

addheader "${header}" "Frop";
